Added Search results page

--- a/assets/sass/base/_mixin.scss
+++ b/assets/sass/base/_mixin.scss
@@ -18,7 +18,7 @@
 // Background-cover Image
 @mixin bg-cover{
     background : {
-        color: $color-light-green;
+        color: $color-light-blue;
         size: cover;
         position: center;
         repeat: no-repeat;
