--- a/assets/sass/base/_variable.scss
+++ b/assets/sass/base/_variable.scss
@@ -3,7 +3,7 @@ $font-primary: 'Rubik', sans-serif;;
 $font-secondary: 'Lora', serif;;
 
 // All Color Code
-$color-primary: #89c74a;
+$color-primary: #3D57B2;
 $color-secondary: #323232;
 
 
@@ -17,8 +17,8 @@ $color-deep-blue: #0055b4;
 $color-deep-pink:#d1008a;
 $color-deep-yellow:#fdd835;
 
-$color-green: #79a206;
-$color-light-green: #89c74a;
+$color-blue: #3D57B2;
+$color-light-blue: #3D57B2;
 
 $color-gray: #666;
 $color-gray-1: #7e7e7e;
