--- a/assets/sass/components/_breadcrumb.scss
+++ b/assets/sass/components/_breadcrumb.scss
@@ -37,7 +37,7 @@
             text-decoration: none;
             
             &:hover{
-                color: $color-green;
+                color: $color-blue;
             }
         }
 
