--- a/assets/sass/components/_newsletter.scss
+++ b/assets/sass/components/_newsletter.scss
@@ -47,6 +47,6 @@
         font-size: 14px;
         font-weight: 500;
         color: $color-gray;
-        &:hover{color: $color-green;}
+        &:hover{color: $color-blue;}
     }
 } 
