--- a/assets/sass/components/_page-pagination.scss
+++ b/assets/sass/components/_page-pagination.scss
@@ -45,7 +45,7 @@
         border-radius: 3px;
         &:hover,
         &.active{
-            background: $color-green;
+            background: $color-blue;
             color: $color-white;
         }
         
