--- a/assets/css/plugin/price_range_style.css
+++ b/assets/css/plugin/price_range_style.css
@@ -9,7 +9,7 @@ Price Range Slider
 .sliderText{
     width:40%;
     margin-bottom:30px;
-    border-bottom: 2px solid #89c74a;
+    border-bottom: 2px solid #3D57B2;
     padding: 10px 0 10px 0px;
     font-weight:bold;
 }
@@ -22,7 +22,7 @@ Price Range Slider
     width:100%;
 }
 .ui-widget-header {
-    background: #89c74a;
+    background: #3D57B2;
 }
 
 .price-range-search {
@@ -65,7 +65,7 @@ a.ui-button:active,
 .ui-button:active,
 .ui-button.ui-state-active:hover {
 	border: 1px solid #f9f9f9;
-	background: #89c74a;
+	background: #3D57B2;
 	font-weight: normal;
 	color: #ffffff;
 }
