--- a/assets/sass/base/_color.scss
+++ b/assets/sass/base/_color.scss
@@ -1,5 +1,5 @@
 /*****************************
 02 - Base - Color
 *****************************/
-.color-green{color: $color-primary;}
+.color-blue{color: $color-primary;}
 .gray-bg{background-color: $color-white-1;}
