--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -147,7 +147,7 @@
     margin-left: 80px;
     color: $color-gray;
     background: $color-white-1;
-    border-left: 5px solid $color-green;
+    border-left: 5px solid $color-blue;
     padding: 15px 30px;
     margin: 30px 0 30px 40px;
     text-align: justify;
