--- a/assets/sass/page/_faq.scss
+++ b/assets/sass/page/_faq.scss
@@ -20,7 +20,7 @@
   background: $color-white-1;
   color: $color-black-1;
 	  &.active{
-	  	background: $color-green;
+	  	background: $color-blue;
 	  	color: $color-white;
 	  	&::after {content: "\2212";}
 	  }
