--- a/assets/sass/layout/_offcanvas-add-cart.scss
+++ b/assets/sass/layout/_offcanvas-add-cart.scss
@@ -1,21 +1,22 @@
 /*****************************
-40 - Layout - Addcart Offcanvas
+40 - Layout - Addlist Offcanvas
 *****************************/
 
 // Header Checkout Popup Box
 
-.offcanvas-add-cart{
+.offcanvas-add-list {
     background: $color-white;
     overflow-y: auto;
-    
+
     &__list {
         display: flex;
         font-size: 14px;
         padding: 20px 0;
         margin-bottom: 20px;
-        border-bottom: 1px solid  $color-white-3;
+        border-bottom: 1px solid $color-white-3;
         border-top: 1px solid $color-white-3;
-        &:last-child{
+
+        &:last-child {
             margin-bottom: 0;
         }
     }
@@ -25,25 +26,33 @@
         overflow: hidden;
     }
 
-    &__img{
+    &__img {
         width: 100%;
     }
 
-    &__link{
+    &__link {
         display: block;
         color: $color-secondary;
-        &:hover{color: $color-primary}
+
+        &:hover {
+            color: $color-primary
+        }
     }
 
-    &__detail  {
-        span{ display: block;}
+    &__detail {
+        span {
+            display: block;
+        }
     }
 
     &__item-dismiss {
         font-size: 14px;
         color: $color-gray;
         background: transparent;
-        &:hover{color: $color-red}
+
+        &:hover {
+            color: $color-red
+        }
     }
 
     &__item-count {
@@ -81,21 +90,21 @@
     &__checkout-info {
         padding-top: 25px;
     }
-    
+
     &__checkout-left-info {
         color: #777;
     }
-    
+
     &__checkout-right-info {
         font-weight: 600;
         color: $color-silver;
     }
 
-    &__btn-checkout{
+    &__btn-checkout {
         margin-top: 50px;
     }
 
-    &__checkout-box-bottom{
+    &__checkout-box-bottom {
         padding-bottom: 15px;
     }
 }
